# ui-ux-upgrade

./: .gitignore  DEPLOYMENT_GUIDE.md  FEATURES.md  README.md  __init__.py  frappecloud_install.md  frappecloud_install.sh  hooks.py  package.sh  pyproject.toml
ui_ux_upgrade/: __init__.py  api.py
ui_ux_upgrade/config/: desktop.py
ui_ux_upgrade/install/: after_install.py
ui_ux_upgrade/public/css/: web-modern-ui.css
ui_ux_upgrade/public/js/: company.js  dashboard.js  desk.js  setup.js
ui_ux_upgrade/suggestions/: __init__.py  doctype_setup.py  suggestions.py
ui_ux_upgrade/ui_ux_upgrade/public/js/: login.js  modern-ui.js  user.js  web-modern-ui.js
ui_ux_upgrade/ui_ux_upgrade/public/scss/: website.scss
ui_ux_upgrade/ui_ux_upgrade/uninstall/: __init__.py  before_uninstall.py
ui_ux_upgrade/upgrade_checker/: __init__.py  doctype_setup.py  upgrade_checker.py
