[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui_ux_upgrade"
version = "1.0.0"
description = "Modern UI/UX enhancements for ERPNext with improved design, animations, and user experience"
authors = [
    {name = "E-Mart Systems", email = "support@emart.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "frappe>=15.0.0",
    "erpnext>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/mknoufi/ui-ux-upgrade"
Documentation = "https://ui-ux-upgrade.readthedocs.io"
Repository = "https://github.com/mknoufi/ui-ux-upgrade.git"
"Bug Tracker" = "https://github.com/mknoufi/ui-ux-upgrade/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ui_ux_upgrade*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ui_ux_upgrade --cov-report=term-missing"
